ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smarties
  labels:
    name: smarties
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
  namespace: default
spec:
  rules:
  - host: real.encs.concordia.ca
    http:
      paths:
      - pathType: Prefix
        path: /chat(/|$)(.*)
        backend:
          service:
            name: chat-svc
            port: 
              number: 4040
      - pathType: Prefix
        path: /auth(/|$)(.*)
        backend:
          service:
            name: auth-svc
            port: 
              number: 3000
      - pathType: Prefix
        path: /profile(/|$)(.*)
        backend:
          service:
            name: profile-svc
            port: 
              number: 8080
